--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Embedded Dashboard</title>
+  <title>BMPS Dashboard</title>
   <style>
     html, body {
       margin: 0;
