--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
   <iframe 
-    src="https://bm0pyd3c3hqjrwrie.lite.vusercontent.net/#dashboard" 
+    src="https://v0.dev/chat/fork-of-open-in-v0-v9iHEGMlDe6?b=b_4Rqa0ADG7jI" 
     allowfullscreen 
     scrolling="yes">
   </iframe>
