--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
   <iframe 
-    src="https://v0.dev/chat/fork-of-open-in-v0-v9iHEGMlDe6?b=b_4Rqa0ADG7jI" 
+    src="https://kzmgd9wfl1zj3mgeo7k9.lite.vusercontent.net/#" 
     allowfullscreen 
     scrolling="yes">
   </iframe>
